# sklearn-package-template

./: README.md  demo-predict.sh  demo-train.sh
scikit-learn-template/: __main__.py  api_exceptions.py  pyproject.toml
scikit-learn-template/model_package/: __init__.py  load_model.py  model.py  version.py
scikit-learn-template/tests/: test_load_model.py  test_model.py
