[tool.poetry]
name = "scikit-learn-template"
version = "0.1.0"
description = "Model building module to detect if a user on an website is real or fake."
authors = ["gtregoat <tregoat.gabriel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
sklearn = "^0.0"
pandas = "^1.4.2"
joblib = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
